[SELC-5247] Fix: change method to read json file (#173)